# Trabalho_APA

./: .gitignore  CMakeLists.txt  FileHandler.cpp  FileHandler.h  FileReader.cpp  FileReader.h  Golomb.cpp  Golomb.h  Grafo.cpp  Grafo.h  HeapSort.cpp  HeapSort.h  Kruskal.cpp  Kruskal.h  QuickSort.cpp  QuickSort.h  TimeCounter.cpp  TimeCounter.h  main.cpp  run.bat
Instances/: golomb.txt  grafo-1.txt  grafo-10.txt  grafo-2.txt  grafo-3.txt  grafo-4.txt  grafo-5.txt  grafo-6.txt  grafo-8.txt  i16-sort.txt  i18-sort.txt  i20-sort.txt  result.txt  sort-10.txt  sort-14.txt  sort-15.txt  sort-16.txt  sort-20.txt  sort-30.txt  sort-40.txt  sort-50.txt  teste.cpp
